--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -48,3 +48,10 @@ jobs:
           else
             echo "there was nothing, bruh"
           fi
+
+        - name: Загрузить скриншоты ошибок (если были)
+        if: failure()  # Выполнять только если скрипт упал
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-screenshots
+          path: ./*.png
