--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -35,7 +35,7 @@ jobs:
         run: python parser.py
 
         - name: Загрузить скриншоты ошибок (если были)
-        if: failure()  # Выполнять только если скрипт упал
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: debug-screenshots
