--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -53,7 +53,7 @@ jobs:
             git push
             echo "SCHEDULE HAS BEEN UPDATED"
           else
-            echo "Расписание не изменилось (или не скачалось)."
+            echo "SCHEDULE DIDN'T CHANGE(or it wasn't downloaded), no commit made."
             echo "Untracked files (ignored):"
             git status -s
           fi
